doc/pjdfstest/tests/errors/efault/sidebar-items.js
window.SIDEBAR_ITEMS = {"macro":["efault_either_test_case","efault_path_test_case"]};